<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#32af85"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/poppins"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:background="@drawable/rounded_rect">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/emailLog"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/passLog"
                android:inputType="textPassword"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/gender"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/telp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/telp"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_tf" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bg_button"
            android:text="REGISTER"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:onClick="actionRegister"/>

        <androidx.appcompat.widget.AppCompatButton
            style="?attr/borderlessButtonStyle"
            android:id="@+id/btnBackLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_trans"
            android:layout_gravity="center"
            android:text="@string/have_account"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

</LinearLayout>